<resources>
    <string name="app_name">AguaDatosApp</string>
    <string name="aguadatos">AguaDatos</string>
    <string name="title_initial">Initial</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="title_login">Login</string>
    <string name="welcome">Welcome Back!</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="lock">Lock icon</string>
    <string name="person">Person icon</string>
    <string name="or_separator">" Or "</string>
    <string name="title_signup">Signup</string>
    <string name="account_prompt">Create an account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="records">Records</string>
    <string name="graphs">Graphs</string>
    <string name="config">Configuration</string>
    <string name="feedback">Feedback</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="plant_flow">Plant Flow</string>
    <string name="raw_water_turbidity">Raw\n Water Turbidity</string>
    <string name="coagulant_dosage">Coagulant Dosage</string>
    <string name="filtered_water_turbidity">Filtered Water Turbidity</string>
    <string name="clarified_water_turbidity">Clarified Water Turbidity</string>
    <string name="chlorination">CHLORINATION</string>
    <string name="home_page_msg">Raw Water Turbidity</string>
    <string name="graph_placeholder">Graph Placeholder</string>
    <string name="aguadatos_label">AguaDatos Label</string>
    <string name="account">Account</string>
    <string name="clarified_water">CLARIFIED WATER</string>
    <string name="filtered_water">FILTERED WATER</string>
    <string name="chemical_type_pac">Chemical Type: PACl</string>
    <string name="slider_position">Slider Position:</string>
    <string name="water_inflow_rate">Water Inflow Rate:</string>
    <string name="start_volume">Start Volume:</string>
    <string name="end_volume">End Volume:</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="output">Output</string>
    <string name="coagulant_dose">Coagulant Dose:</string>
    <string name="coagulant_flow_rate">Coagulant Flow Rate:</string>
    <string name="_0">0%</string>
    <string name="_100">100%</string>
    <string name="percent">%</string>
    <string name="coagulant_dosage_colon">Coagulant Dosage:</string>
    <string name="l_s">L/s</string>
    <string name="ml">mL</string>
    <string name="_00">00</string>
    <string name="colon">:</string>
    <string name="mg_l">mg/L</string>
    <string name="ml_s">mL/s</string>
    <string name="timer_start">Timer Start</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="space"></string>
    <string name="_50">50</string>
    <string name="enter_start_volume">Enter Start Volume</string>
    <string name="enter_end_volume">Enter End Volume</string>
    <string name="input">Input</string>
    <string name="output_text_label">Output</string>
    <string name="new_slider_position">New Slider Position:</string>
    <string name="new_coagulant_flow_rate">New Coagulant Flow Rate:</string>
    <string name="target_coagulant_dose">Target Coagulant Dose:</string>
    <string name="volume_of_tank_2">Volume of Tank 2:</string>
    <string name="volume_of_tank_1">Volume of Tank 1:</string>
    <string name="submit">Submit</string>
    <string name="coagulant_dosage_title">COAGULANT DOSAGE</string>
    <string name="calibration">Calibration</string>
    <string name="change_dose">Change Dose</string>
    <string name="active_tank">Active Tank</string>
    <string name="chem_type">Chemical Type: %1$s</string>
    <string name="coag_run_out_message">Coagulant will run out on %1s</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="l">L</string>
    <string name="please_confirm_your_entry">Please confirm your entry:</string>
    <string name="confirm_submission">CONFIRM SUBMISSION</string>
    <string name="coagulant_dosage_mg_l">Coagulant Dosage: ___ mg/L</string>
    <string name="coagulant_flow_rate_ml_s">Coagulant Flow Rate: ___ mL/s</string>
    <string name="target_coagulant_flow_rate_ml_s">Target Coagulant Flow Rate: ___ mL/s</string>
    <string name="new_coagulant_dosage_mg_l">New Coagulant Dosage: ___ mg/L</string>
    <string name="active_tank_">Active tank: __</string>
    <string name="active_tank_volume_l">Active Tank Volume: ___ L</string>
    <string name="new_slider_position_">New Slider Position: ___%</string>
    <string name="new_coagulant_flow_rate_ml_s">New Coagulant Flow Rate: ___ mL/s</string>
    <string name="time_elapsed_s">Time Elapsed: ___ s</string>
    <string name="end_volume_ml">End Volume: ___ mL</string>
    <string name="start_volume_ml">Start Volume: ___ mL</string>
    <string name="inflow_rate_ml_s">Inflow Rate: ___ mL/s</string>
    <string name="slider_position_percent">Slider Position: ___ %</string>
    <string name="submitted">Submitted:</string>
    <string name="return_home">Return Home</string>
    <string name="coagulant_dosage_submission">COAGULANT DOSAGE SUBMISSION</string>
    <string name="date">Date: %1$s</string>
    <string name="date_and_time">%1$s at %2$s</string>
    <string name="x">X</string>
    <string name="date_default">Date: __/__/__</string>
    <string name="active_tank_with_input">Active Tank: %1d</string>
    <string name="active_tank_volume">Active Tank Volume: %.1f L</string>
    <string name="slider_position_with_input">Slider Position: %.1f%%</string>
    <string name="inflow_rate_with_input2">Inflow Rate: %.1f mL/s</string>
    <string name="start_volume_with_input">Start Volume: %.1f mL</string>
    <string name="end_volume_with_input">End Volume: %.1f mL</string>
    <string name="time_elapsed_with_input">Time Elapsed: %.1f s</string>
    <string name="chemical_dose_with_input">Coagulant Dosage: %.1f mg/L</string>
    <string name="chemical_flow_rate_with_input">Coagulant Flow Rate: %.1f mL/s</string>
    <string name="target_coag_dose">Target Coagulant Dosage: %.1f mg/L</string>
    <string name="new_coag_flow_rate">New Coagulant Flow Rate: %.1f mL/s</string>
    <string name="new_slider_pos"> New Slider Position: %.1f%%</string>
    <string name="raw_water_caps">RAW WATER</string>
    <string name="turbidity_ntu">Turbidity (NTU):</string>
    <string name="notes">Notes:</string>
    <string name="turbidity">Turbidity:</string>
    <string name="ntu">NTU</string>
    <string name="turbidity_with_input">Turbidity: %.1f NTU</string>
    <string name="__">__</string>
    <string name="_ntu">__ NTU</string>
    <string name="plant_flow_caps">PLANT FLOW</string>
    <string name="inflow_rate">Inflow Rate:</string>
    <string name="lts_sec">lts/sec</string>
    <string name="inflow_rate_with_input">Inflow Rate: %.1f L/s</string>
    <string name="_l_s">__ L/s</string>
    <string name="filter1_turbidity">Filter 1 Turbidity:</string>
    <string name="filter_number_turbidity_text">Filter %d Turbidity:</string>
    <string name="configuration">CONFIGURATION</string>
    <string name="operator_name">Operator Name:</string>
    <string name="plant_name">Plant Name:</string>
    <string name="dosage_presets">Dosage Presets</string>
    <string name="filter_presets">Filter Presets</string>
    <string name="chemical_type">Chemical Type:</string>
    <string name="chemical_concentration">Chemical Concentration:</string>
    <string name="sync_data">Sync Data</string>
    <string name="save">SAVE</string>
    <string name="number_of_filters">Number of Filters:</string>
    <string name="chemical_type_switch">Chemical Type Switch</string>
    <string name="g_l">g/L</string>
    <string name="chlorine_dosage">Chlorine Dosage</string>
    <string name="chlorine_dosage_colon">Chlorine Dosage:</string>
    <string name="chlorine_flow_rate">Chlorine Flow Rate:</string>
    <string name="target_chlorine_dose">Target Chlorine Dose:</string>
    <string name="new_chlorine_flow_rate">New Chlorine Flow Rate:</string>
    <string name="chlorine_dosage_title">CHLORINE DOSAGE</string>
    <string name="chlorine_run_out_message">Chlorine will run out on %1s</string>
    <string name="submission_error_message">Please ensure all inputs are filled before submitting.</string>
    <string name="switch_tab_error_message">Please ensure all inputs are filled before adjusting the dosage.</string>
    <string name="chlorine_dosage_mg_l">Chlorine Dosage: ___ mg/L</string>
    <string name="chlorine_flow_rate_ml_s">Chlorine Flow Rate: ___ mL/s</string>
    <string name="target_chlorine_flow_rate_ml_s">Target Chlorine Flow Rate: ___ mL/s</string>
    <string name="new_chlorine_flow_rate_ml_s">New Chlorine Flow Rate: ___ mL/s</string>
    <string name="new_chlorine_dosage_mg_l">New Chlorine Dosage: ___ mg/L</string>
    <string name="chlorine_dosage_submission">CHLORINE DOSAGE SUBMISSION</string>
    <string name="chlorine_dose_with_input">Chlorine Dosage: %.1f mg/L</string>
    <string name="chlorine_flow_rate_with_input">Chlorine Flow Rate: %.1f mL/s</string>
    <string name="target_chlorine_dose_with_input">Target Chlorine Dosage: %.1f mg/L</string>
    <string name="new_chlorine_flow_rate_with_input">New Chlorine Flow Rate: %.1f mL/s</string>
    <string name="feedback_caps">FEEDBACK</string>
    <string name="improvement_message">Please let us know how we can improve AguaDatos!</string>
    <string name="records_caps">RECORDS</string>
    <string name="entry_name">Entry: %s</string>
    <string name="entry_chem_dose">Chemical Dose: %s mg/L</string>
    <string name="entry_timestamp">Timestamp: %s</string>
    <string name="feedback_with_input">Feedback: %s</string>
    <string name="delete">DELETE</string>
    <string name="entry_plant_flow">Entry: Plant Flow</string>
    <string name="entry_raw_water">Entry: Raw Water</string>
    <string name="entry_clarified_water">Entry: Clarified Water</string>
    <string name="entry_filtered_water">Entry: Filtered Water</string>
    <string name="entry_calib">Entry: %s Dosage Calibration</string>
    <string name="entry_change_dose">Entry: %s Dosage Adjustment</string>
    <string name="coagulant">Coagulant</string>
    <string name="chlorine">Chlorine</string>
    <string name="today">TODAY</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="under_construction">Under Construction</string>
    <string name="login_msg">Login successful!</string>
    <string name="further_steps_required">Further steps required: %s</string>
    <string name="login_failed">Login failed: %s</string>
    <string name="fields_required">All fields are required</string>
    <string name="signup_success">Sign-up successful! Please check your email for a confirmation code.</string>
    <string name="signup_fail">Sign-up failed: %s</string>
    <string name="enter_confirmation_code">Please enter the confirmation code.</string>
    <string name="confirm_success">Confirmation successful!</string>
    <string name="confirm_required">Confirmation required</string>
    <string name="confirm_fail">Confirmation failed: %s</string>
    <string name="verification_success">Verification successful</string>
    <string name="verification_wrong">Incorrect verification code</string>
</resources>