<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@color/background_blue"
        android:layout_marginBottom="55dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coag_dosage_title"
        android:text="@string/coagulant_dosage_submission"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/entry_box" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/entry_box"
        android:background="@drawable/rounded_white2"
        app:layout_constraintTop_toBottomOf="@id/coag_dosage_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/go_home_button" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_text"
            android:paddingVertical="5dp"
            android:text="@string/date_default"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/chem_type_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chem_type_text"
            android:text="@string/chemical_type_pac"
            android:layout_marginVertical="7dp"
            android:layout_marginHorizontal="25dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/date_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/calibration_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calibration_text"
            android:text="@string/calibration"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/chem_type_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/slider_pos_info" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slider_pos_info"
            android:textStyle="bold"
            android:text="@string/slider_position_percent"
            android:textSize="15sp"
            android:paddingHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@id/calibration_text"
            app:layout_constraintBottom_toTopOf="@id/inflow_rate_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inflow_rate_info"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/inflow_rate_ml_s"
            android:paddingHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@id/slider_pos_info"
            app:layout_constraintBottom_toTopOf="@id/sv_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sv_info"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/start_volume_ml"
            android:paddingHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@id/inflow_rate_info"
            app:layout_constraintBottom_toTopOf="@id/ev_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ev_info"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/end_volume_ml"
            android:paddingHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@id/sv_info"
            app:layout_constraintBottom_toTopOf="@id/time_elapsed_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_elapsed_info"
            android:text="@string/time_elapsed_s"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@id/ev_info"
            app:layout_constraintBottom_toTopOf="@id/active_tank_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/active_tank_info"
                android:text="@string/active_tank_"
                android:textStyle="bold"
                android:textSize="15sp"
                android:paddingHorizontal="70dp"
                app:layout_constraintTop_toBottomOf="@id/time_elapsed_info"
                app:layout_constraintBottom_toTopOf="@id/tank_vol_info"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tank_vol_info"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/active_tank_volume_l"
                android:paddingHorizontal="70dp"
                app:layout_constraintTop_toBottomOf="@id/active_tank_info"
                app:layout_constraintBottom_toTopOf="@id/output_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/output_text"
            android:text="@string/output"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/tank_vol_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/chem_dose_info" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chem_dose_info"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/coagulant_dosage_mg_l"
            android:paddingHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@id/output_text"
            app:layout_constraintBottom_toTopOf="@id/chem_flow_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/chem_flow_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="70dp"
            android:text="@string/coagulant_flow_rate_ml_s"
            android:textSize="15sp"
            android:textStyle="bold"
                android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/submitted_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chem_dose_info" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitted_text"
            android:text="@string/submitted"
            android:textSize="17sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/chem_flow_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/submit_date_time" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_date_time"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginHorizontal="85dp"
            app:layout_constraintTop_toBottomOf="@id/submitted_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:id="@+id/go_home_button"
        android:text="@string/return_home"
        android:textColor="@color/white"
        android:layout_marginVertical="10dp"
        android:background="@drawable/green_button_background"
        app:layout_constraintTop_toBottomOf="@id/entry_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>