<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="10dp"
    android:background="@color/background_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="55dp" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_page_header"
        android:text="@string/configuration"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:paddingVertical="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/operator_name_box"
        app:layout_constraintTop_toBottomOf="@id/config_page_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/plant_name_box"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operator_name_text"
            android:text="@string/operator_name"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginEnd="10dp" />
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/operator_name_input"
            android:autofillHints=""
            android:hint="@string/space"
            android:inputType="text"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plant_name_box"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/config_page_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dosage_presets_text" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plant_name_text"
            android:text="@string/plant_name"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginEnd="10dp" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/plant_name_input"
            android:autofillHints=""
            android:hint="@string/space"
            android:inputType="text"
            android:textColor="@color/black" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dosage_presets_text"
        android:text="@string/dosage_presets"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/plant_name_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chemical_type_box" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chemical_type_box"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/dosage_presets_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chem_conc_box">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chemical_type"
            android:textSize="17sp" />
        <ImageView
            android:id="@+id/chem_type_switch"
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chem_type_switch_off"
            android:contentDescription="@string/chemical_type_switch" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chem_conc_box"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/chemical_type_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/filter_presets_text">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chem_conc_text"
            android:text="@string/chemical_concentration"
            android:textSize="17sp" />
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="numberDecimal"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:id="@+id/chem_conc_input"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_l"
            android:layout_marginHorizontal="10dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filter_presets_text"
        android:text="@string/filter_presets"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/chem_conc_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/num_filter_box" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/num_filter_box"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/filter_presets_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_button" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_filters_text"
            android:text="@string/number_of_filters"
            android:textSize="17sp" />
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/num_filters_input"
            android:autofillHints=""
            android:hint="@string/space"
            android:inputType="number"
            android:background="@color/white"
            android:textColor="@color/black"
            android:layout_marginStart="10dp" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:background="@drawable/green_button_background_square"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_filter_box"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>