<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp"
        android:background="@color/background_blue"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginBottom="55dp" >
    <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:id="@+id/feedback_header"
            android:layout_height="wrap_content"
            android:text="@string/feedback_caps"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:paddingVertical="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/improvement_message"
            android:id="@+id/improvement_message"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/feedback_header"
            app:layout_constraintBottom_toTopOf="@id/feedback_box"
            app:layout_constraintLeft_toLeftOf="@id/feedback_box"
            app:layout_constraintRight_toRightOf="@id/feedback_box" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/feedback_box"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/space"
            android:inputType="text"
            android:gravity="top|start"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_white"
            app:layout_constraintTop_toBottomOf="@id/improvement_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/feedback_submit_button" />
    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button_background"
            android:id="@+id/feedback_submit_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/feedback_box"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>